Upgraded project to java 9 and added some cli commands